--- a/.github/workflows/about.omrquiz.ai.yml
+++ b/.github/workflows/about.omrquiz.ai.yml
@@ -30,5 +30,5 @@ jobs:
     - name: Deploy
       run: hugo deploy --config "configs/about.omrquiz.ai.toml" --maxDeletes=-1 --target "production" --invalidateCDN --force
       env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY_AI }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_AI }}
