--- a/.github/workflows/www.omrquiz.com.yml
+++ b/.github/workflows/www.omrquiz.com.yml
@@ -9,7 +9,7 @@ on:
         required: true
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - name: Checkout theme repo
       uses: actions/checkout@v4
