edited www.omrquiz yaml

--- a/.github/workflows/www.omrquiz.com.yml
+++ b/.github/workflows/www.omrquiz.com.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-22.04
+    permissions:
+      contents: write
     steps:
     - name: Checkout theme repo
       uses: actions/checkout@v4
