--- a/.github/workflows/www.omrquiz.cloud.yml
+++ b/.github/workflows/www.omrquiz.cloud.yml
@@ -11,7 +11,7 @@ jobs:
           repository: smallize/omrquiz
           token: ${{ secrets.REPO_TOKEN }}
           fetch-depth: 0 
-          submodules: true
+          submodules: false
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
       with:
