--- a/.github/workflows/www.omrquiz.com.yml
+++ b/.github/workflows/www.omrquiz.com.yml
@@ -15,6 +15,11 @@ jobs:
     steps:
     - name: Checkout repo
       uses: actions/checkout@v4
+      with:
+          repository: smallize/omrquiz
+          token: ${{ secrets.REPO_TOKEN }}
+          fetch-depth: 0 
+          submodules: true
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
       with:
