--- a/.github/workflows/blog.omrquiz.ai.yml
+++ b/.github/workflows/blog.omrquiz.ai.yml
@@ -1,4 +1,4 @@
-name: blog.omrquiz.cloud
+name: blog.omrquiz.ai
 on:
   workflow_dispatch:
     inputs:
@@ -26,14 +26,14 @@ jobs:
         id: base-url
         run: |
           if [ "${{ github.event.inputs.environment }}" = "production" ]; then
-            echo "::set-output name=url::https://blogs.omrquiz.cloud"
+            echo "::set-output name=url::https://blogs.omrquiz.ai"
           else
-            echo "::set-output name=url::https://blogs-qa.omrquiz.cloud"
+            echo "::set-output name=url::https://blogs-qa.omrquiz.ai"
           fi
       - name: Build
-        run: hugo --config "configs/blog.omrquiz.cloud.toml","configs/common.omrquiz.cloud.toml" -b "${{ steps.base-url.outputs.url }}" --cleanDestinationDir --minify --templateMetrics --templateMetricsHints --enableGitInfo
+        run: hugo --config "configs/blog.omrquiz.ai.toml","configs/common.omrquiz.ai.toml" -b "${{ steps.base-url.outputs.url }}" --cleanDestinationDir --minify --templateMetrics --templateMetricsHints --enableGitInfo
       - name: Deploy
-        run: hugo deploy --config "configs/blog.omrquiz.cloud.toml" --maxDeletes=-1 --target "${{ github.event.inputs.environment }}" --invalidateCDN --force
+        run: hugo deploy --config "configs/blog.omrquiz.ai.toml" --maxDeletes=-1 --target "${{ github.event.inputs.environment }}" --invalidateCDN --force
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
