--- a/.github/workflows/releases.omrquiz.com.yml
+++ b/.github/workflows/releases.omrquiz.com.yml
@@ -9,15 +9,14 @@ on:
         required: true
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - name: Checkout theme repo
       uses: actions/checkout@v4
       with:
           repository: smallize/omrquiz
           token: ${{ secrets.REPO_TOKEN }}
-          fetch-depth: 0 
-          submodules: true
+          fetch-depth: 0
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
       with:
